@@ -1,3 +1,9 @@
+2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/jtag.h (xmega_device_desc_type): eeprom_page_size is
+	only one byte
+	* src/devdescr.cc (atxmega128a1, atxmega128a1revd): (Dito.)
+
 2011-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/jtag2.h: Introduce jtag2:xmegaSendBPs().
